# Conto-Corrente

./: .gitignore  CMakeLists.txt  ContoCorrente.cpp  Transazione.cpp
include/: ContoCorrente.h  Transazione.h
src/: ContoCorrente.cpp  Transazione.cpp  main.cpp
test/: TestContoCorrente.cpp
